# Visual_navigation_ROS

./: CMakeLists.txt  README.md  package.xml
config/: localisation.rviz
include/: Bumper.hpp  Bumper.hpp~  Color.hpp  Follow_Path.hpp  Follow_Path.hpp~  Goal.hpp  Goal.hpp~  Graph.hpp  Image_processing.hpp  Line.hpp  Localisation.hpp~  Location.hpp  Map_Gui.hpp  Map_node.hpp  Point_Cloud.hpp  Recherche.hpp  Recherche.hpp~  Recherche_Main.hpp  Set_Marker.hpp  Set_Start_Point.hpp  Set_Start_Point.hpp~  Target.hpp  Target.hpp~  Toolbox.hpp  Vo_Broadcast.hpp  Vo_Broadcast.hpp~
launch/: Kalman.launch  Kalman.launch~  alvar.launch  navigation.launch  navigation.launch~
launch/includes/: move_base.launch.xml  move_base.launch.xml~
map/: aip_map.yaml~  map_aip.pgm  map_aip.yaml  map_aip_ori.pgm
msg/: command.msg
param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_planner_params.yaml  move_base_params.yaml
scripts/: EKF_filter.py  KALMAN_lib.py  vo_publisher.py
src/: Bumper.cpp  Bumper.cpp~  Follow_Path.cpp  Follow_Path.cpp~  Goal.cpp  Goal.cpp~  Graph.cpp  Image_processing.cpp  Line.cpp  Localisation.cpp~  Location.cpp  Location.cpp~  Map_Gui.cpp  Map_Main.cpp  Map_Main.cpp~  Map_node.cpp  Model_robot.cpp~  NewOdom.cpp  NewOdom.cpp~  Point_Cloud.cpp  Recherche.cpp  Recherche_Main.cpp  Set_Marker.cpp  Set_Start_Point.cpp  Set_Start_Point.cpp~  Smooth_Path.cpp  Smooth_Path.cpp~  Target.cpp  Target.cpp~  Toolbox.cpp  Vo_Broadcast.cpp  Vo_Broadcast.cpp~  localisation_broadcaster_node.cpp  localisation_broadcaster_node.cpp~  main.cpp~
srv/: MarkersVisibility.srv
